--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+.rating-bar {
+  display: flex;
+  font-size: 24px; /* Rozmiar gwiazdek */
+}
+
+.star {
+  margin-right: 5px; /* Odstęp między gwiazdkami */
+  color: gold; /* Kolor wypełnionej gwiazdki */
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
